# posetrack

./: CMakeLists.txt  README.md  package.xml  start_pose_track.sh  yolov11_pose_track0828.cc  yolov11_pose_track0829.cc  yolov11_pose_track0901.cc  yolov11_pose_track0902.cc
launch/: yolov11_pose_track.launch.py
src/: OSNet.cpp  OSNet.h  yolov11_pose.cc  yolov11_pose_track.cc
src/bytetrack/: BYTETracker.cpp  BYTETracker.h  STrack.cpp  STrack.h
