<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>posetrack</name>
  <version>0.0.0</version>
  <description>YOLOv11 pose estimation and tracking package</description>
  <maintainer email="12344633+zhangdajie168@user.noreply.gitee.com">peng</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>
  <depend>image_transport</depend>
  <depend>orbbec_camera</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <depend>rosidl_default_runtime</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_typesupport_cpp</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>